# petanque

./: pyproject.toml  requirements.md  requirements.txt
src/petanque/: __init__.py  app.py  models.py  storage.py  tournament.py
tests/: test_tournament.py
