[project]
name = "petanque"
version = "0.1.0"
description = "Petanque tournament manager with Flet GUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.10.0"
    "platformdirs>=3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["petanque"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
